--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseNotify.cs" />
+    <Compile Include="Enumeration.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
