--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BaseNotify.cs" />
     <Compile Include="Enumeration.cs" />
+    <Compile Include="EnumerationItem.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +61,7 @@
     </Compile>
     <Compile Include="KeyValuePair.cs" />
     <Compile Include="KeyValuePairList.cs" />
+    <Compile Include="MockKeyItems.cs" />
     <Compile Include="MyList.xaml.cs">
       <DependentUpon>MyList.xaml</DependentUpon>
     </Compile>
