--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseNotify.cs" />
+    <Compile Include="EnumerationList.cs" />
     <Compile Include="Enumeration.cs" />
     <Compile Include="EnumerationItem.cs" />
     <Compile Include="Form1.cs">
